WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269924
Crash with Turn Off the Lights extension enabled
https://bugs.webkit.org/show_bug.cgi?id=269924
Summary
Crash with Turn Off the Lights extension enabled
Kiara Rose
Reported
2024-02-22 10:08:59 PST
rdar://123323719
Attachments
Add attachment
proposed patch, testcase, etc.
Kiara Rose
Comment 1
2024-02-22 10:11:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24957
EWS
Comment 2
2024-02-22 11:36:08 PST
Committed
275193@main
(b5ff6a931f2d): <
https://commits.webkit.org/275193@main
> Reviewed commits have been landed. Closing PR #24957 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug