Crash with Turn Off the Lights extension enabled https://bugs.webkit.org/show_bug.cgi?id=269924 rdar://123323719

Reviewed by Timothy Hatcher.

This assertion is being hit:
*** Assertion failure in -[_UIMenuBuilder _insertMenu:intoParentMenu:newParentMenu:], UIMenuBuilder.m:443

This is because "duplicate" commands are being inserting into the menu. Per UIKit,
commands cannot have the same selector if their propertyList is the same. To fix this,
pass in a propertyList to each command so they can be distinguished from one other.

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionCommandCocoa.mm:
(+[_WKWebExtensionKeyCommand commandWithTitle:image:input:modifierFlags:handler:]):

Canonical link: https://commits.webkit.org/275193@main